@@ -1,0 +1,7 @@
+Title: f5_bigip_conns: new check to monitor number of current connections
+Level: 1
+Component: checks
+Version: 1.2.5i1
+Date: 1389614781
+Class: feature
+
