@@ -1,0 +1,34 @@
+title: F5 Big-IP: number of current connections
+agents: snmp
+catalog: hw/network/f5
+license: GPL
+distribution: check_mk
+description:
+ The check queries the MIB tables of F5 BIG-IP loadbalancers (local traffic managers)
+ for the number of current connections and the number of current ssl connections.
+
+ It supports devices running the 9.0 and above releases of the F5 OS. It's tested against 9.3
+ devices.
+
+ Warning and critical limits can be given for both types of data.
+
+ The check is supported by WATO.
+
+inventory:
+ The check has two items per host, the number of connections, and the number of ssl connections
+
+perfdata:
+ The value: the number of current connections
+
+[parameters]
+parameters(dict): parameters is a dictionary with two keys
+
+ {"conns"}: the number of connections from {sysStatClientCurConns }
+
+ {"sslconns"}: the number of ssl connections from {sysClientsslStatCurConns }
+
+[configuration]
+f5_bigip_conns_default_levels(dict): This variable is preset to {{ "conns": ( 25000, 30000 ) }, "sslconns": ( 25000, 30000 )}
+
+
+
